package liuwei.decorator;

/**
 * @Title: Component
 * @Description: TODO(用一句话描述该文件做什么)
 * @author: caoyue
 * @date: 2020/2/20 14:38
 * @最后修改人: caoyue
 * @最后修改时间: 2020/2/20 14:38
 * @company: shopin.net
 * @version: V1.0
 */

public abstract class Component {
    public abstract void display();
}
